[gd_scene load_steps=13 format=2]

[ext_resource path="res://objects/BaseObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/explosion.png" type="Texture" id=2]
[ext_resource path="res://objects/Explosion.gd" type="Script" id=3]
[ext_resource path="res://code/VariableSound2D.gd" type="Script" id=4]
[ext_resource path="res://sounds/Explosion 85.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), null ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 25.7783

[node name="Explosion" instance=ExtResource( 1 )]
collision_mask = 0
script = ExtResource( 3 )
knockback_amount = 2000000

[node name="Sprite" type="AnimatedSprite" parent="." index="2"]
frames = SubResource( 6 )

[node name="Sound" type="AudioStreamPlayer2D" parent="." index="3"]
stream = ExtResource( 5 )
volume_db = -2.0
bus = "Fx"
script = ExtResource( 4 )

[node name="Hitbox" type="Area2D" parent="." index="4"]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 7 )

[node name="RemoveHitboxTimer" type="Timer" parent="." index="5"]
process_mode = 0
wait_time = 0.1
one_shot = true
autostart = true

[node name="WaveTimer" type="Timer" parent="." index="6"]
process_mode = 0
wait_time = 0.05
one_shot = true
autostart = true

[node name="ExitTimer" type="Timer" parent="." index="7"]
one_shot = true
autostart = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="RemoveHitboxTimer" to="." method="_on_RemoveHitboxTimer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="ExitTimer" to="." method="_on_ExitTimer_timeout"]
